fixed gap in sidebar

--- a/query.css
+++ b/query.css
@@ -5,7 +5,6 @@
     width: 200px;
     height: 100%;
     background-color: #f0f0f0;
-    padding: 10px;
     margin-right: 200px;
     box-sizing: border-box;
     overflow: auto;
